[tool.poetry]
name = "entente"
version = "2.2.2"
description = "Polygonal meshes in vertex-wise correspondence"
authors = ["Paul Melnikow <github@paulmelnikow.com>", "Metabolize"]
license = "MIT"
include = ["CHANGELOG.md"]
exclude = ["**/test_*.py"]
homepage = "https://github.com/lace/entente"
repository = "https://github.com/lace/entente"
documentation = "https://entente.readthedocs.io/en/stable/"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Other Audience",
    "Intended Audience :: Science/Research",
    "Topic :: Artistic Software",
    "Topic :: Multimedia :: Graphics :: 3D Modeling",
    "Topic :: Scientific/Engineering :: Visualization",
    "Operating System :: OS Independent",
]

[tool.poetry.dependencies]
# tri-again doesn't work in Python 3.9.
python = ">=3.7,<3.9"
cached_property = "*"
click = {version = ">7.0,<9.0", optional = true}
lacecore = {version = ">=2.3.0,<=3.0.0", extras = ["obj"]}
meshlab-pickedpoints = {version = ">=2.0.0,<3", optional = true}
numpy = "<1.19.0"
ounce = ">=1.1.1,<2.0"
polliwog = ">=2.0.0,<=3.0.0"
proximity = {version = ">=1.1.0,<2", optional = true}
PyYAML = {version = ">=5.1", optional = true}
scipy = {version = "*", optional = true}
tqdm = "*"
tri-again = {version = ">=1.1.0,<2.0", optional = true}
vg = ">=2.0.0"
simplejson = "*"

[tool.poetry.extras]
cli = ["click", "pyyaml", "tri-again"]
landmarker = ["proximity", "scipy"]
meshlab = ["meshlab-pickedpoints"]
surface_regressor = ["proximity", "scipy"]

[tool.poetry.dev-dependencies]
black = "21.6b0"
click = "8.0.1"
coverage = "5.5"
executor = "23.2"
flake8 = "3.9.2"
flake8-import-order = "0.18.1"
myst-parser = "0.15.1"
pytest = "6.2.4"
pytest-cov = "2.12.1"
Sphinx = "4.1.0"
sphinxcontrib-apidoc = "0.3.0"


[build-system]
# Lint requires setuptools.
requires = ["setuptools", "poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.report]
fail_under = 100.0
omit = ["**/test_*.py"]
