[tool.poetry]
name = "entente"
version = "3.0.0"
description = "Polygonal meshes in vertex-wise correspondence"
authors = ["Paul Melnikow <github@paulmelnikow.com>", "Metabolize"]
license = "MIT"
include = ["CHANGELOG.md"]
exclude = ["**/test_*.py"]
homepage = "https://github.com/lace/entente"
repository = "https://github.com/lace/entente"
documentation = "https://entente.readthedocs.io/en/stable/"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Other Audience",
    "Intended Audience :: Science/Research",
    "Topic :: Artistic Software",
    "Topic :: Multimedia :: Graphics :: 3D Modeling",
    "Topic :: Scientific/Engineering :: Visualization",
    "Operating System :: OS Independent",
]

[tool.poetry.dependencies]
python = ">=3.7,<4"
cached_property = "*"
click = {version = ">7.0,<9.0", optional = true}
lacecore = {version= ">=3.0.0a0,<4", extras = ["obj"]}
meshlab-pickedpoints = {version = ">=4.1.0,<5", optional = true}
numpy = "*"
ounce = ">=1.1.1,<2.0"
polliwog = ">=3.0.0a0,<4"
proximity = {version = ">=2.0.0,<3", optional = true}
PyYAML = {version = ">=5.1", optional = true}
scipy = {version = "*", optional = true}
tqdm = "*"
tri-again = {version = ">=2.0.0a0,<3", optional = true}
vg = ">=2.0.0"
simplejson = "*"

[tool.poetry.extras]
cli = ["click", "pyyaml", "tri-again"]
landmarker = ["proximity", "scipy"]
meshlab = ["meshlab-pickedpoints"]
surface_regressor = ["proximity", "scipy"]

[tool.poetry.dev-dependencies]
black = "22.12.0"
click = "8.1.3"
coverage = "6.5.0"
env_flag = "2.1.0"
executor = "23.2"
flake8 = "5.0.4"
flake8-import-order = "0.18.2"
myst-parser = "0.18.1"
pytest = "7.2.0"
pytest-cov = "4.0.0"
Sphinx = "4.3.2"
sphinxcontrib-apidoc = "0.3.0"

[build-system]
# Lint requires setuptools.
requires = ["setuptools", "poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.report]
fail_under = 100.0
omit = ["**/test_*.py"]
